@@ -1,3 +1,7 @@
+Mon, Feb 3, 2008
+---------------------------------------------------------------------
+- Added README.rdoc and sample database configuration files, updated sample users.
+
 Mon, Feb 2, 2008
 ---------------------------------------------------------------------
 - Updated task related controller and view specs.
